force-app/main/default/objects/Integration_Detail__c/Integration_Detail__c.object-meta.xml
<CustomObject>
    <label>Integration Detail</label>
    <nameField>
        <label>OTP</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>