force-app/main/default/objects/Integration_Detail__c/fields/Complaint__c.field-meta.xml
<CustomField>
    <fullName>Complaint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Complaint</label>
    <referenceTo>Complaint__c</referenceTo>
    <relationshipLabel>Integration Details</relationshipLabel>
    <relationshipName>Integration_Details</relationshipName>
    <type>Lookup</type>
</CustomField>