force-app/main/default/objects/Integration_Detail__c/fields/Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone__c</fullName>
    <inlineHelpText>10 Digits Mobile Number</inlineHelpText>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>