force-app/main/default/objects/Integration_Detail__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <label>Response Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>